# lendingclub-credit-risk-mlops

./: Makefile  README.md  pyproject.toml
configs/: data.yaml  logging.yaml  paths.yaml  training.yaml
pipelines/: inference_pipeline.py  retrain_pipeline.py  train_pipeline.py  validate_pipeline.py
src/common/: cli.py  config.py  exceptions.py  io.py  logging.py  utils.py
src/evaluation/: checks.py  evaluate.py  promote.py
src/features/: build_features.py  schema.py
src/features/transformers/: base.py  categorical.py  numerical.py  temporal.py
src/inference/: batch.py  service.py
src/ingestion/: ingest.py  validate.py
src/monitoring/: run_monitoring.py
src/monitoring/alerts/: email.py  slack.py
src/monitoring/checks/: data_quality.py  drift.py  performance.py
src/registry/: base.py  local.py  mlflow.py  register.py
src/schemas/: config_schemas.py  feature_schema.py  prediction_schema.py  raw_data.py
src/training/: estimator.py  train.py  trainer.py  tuning.py
webapp/: run.py
webapp/api/: predictor.py  routes.py  schemas.py
