[build-system]

requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-mlops"
version = "0.1.0"
description = "Production-grade end-to-end credit risk ML system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Naimish Bhoi", email = "naimish.bhoi.37@gmail.com"}
]

dependencies = [
    # Core dependencies
    "numpy>=1.23,<2.0",
    "pandas>=1.5,<2.0",
    "scikit-learn>=1.2,<2.0",

    # Experiment tracking/ registry
    "mlflow>=2.9,<3.0",

    # Configuration & validation
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.5,<3.0",

    # Utilities
    "tqdm>=4.65,<5.0",

]

[project.optional-dependencies]
dev = [
    "black>=23.0,<25.0",
    "ruff>=0.1,<0.5",
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ------------------------
# Tooling Configuration
# ------------------------

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"